--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -17,14 +17,13 @@ jobs:
       - name: Login to Azure
         uses: azure/login@v1
         with:
-          creds: ${{ secrets.AZURE_CREDENTIALS }}
+          creds: ${{ secrets.AZURE_CRED }}
 
       - name: Deploying
         uses: azure/CLI@v1
         with:
           inlineScript: |
-            az deployment group create \
-            --name StorageAccountDeployment \
-            --resource-group savdevgithubdeploy \
-            --template-file armtemplates/storageaccount.json \
-            --parameters storageAccountType=Standard_GRS
+            az login --service-principal --username 579cde86-9000-4c54-96b0-48160ba18b24 --password OuO8Q~azZFfgX5ofLlCXMyEqg_qXqWrVY36ykbAC  --tenant 9721c5ac-f796-419a-bd16-2ee99a4332eb
+            az aks get-credentials --resource-group rg-aks-003 --name aks-003
+            kubelogin convert-kubeconfig -l spn
+            
