--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -26,4 +26,5 @@ jobs:
             az login --service-principal --username 579cde86-9000-4c54-96b0-48160ba18b24 --password OuO8Q~azZFfgX5ofLlCXMyEqg_qXqWrVY36ykbAC  --tenant 9721c5ac-f796-419a-bd16-2ee99a4332eb
             az aks get-credentials --resource-group rg-aks-003 --name aks-003
             kubelogin convert-kubeconfig -l spn
+            kubectl get pods
             
