--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -28,5 +28,8 @@ jobs:
             unzip kubelogin-linux-amd64.zip
             cp bin/linux_amd64/kubelogin /usr/bin
             kubelogin convert-kubeconfig -l spn
+            curl -LO "https://dl.k8s.io/release/$(curl -L -s https://dl.k8s.io/release/stable.txt)/bin/linux/amd64/kubectl"
+            chmod 700 kubectl
+            cp kubectl /usr/bin
             kubectl get pods
             
