--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -12,7 +12,13 @@ jobs:
     deploy:
       runs-on: ubuntu-latest
       steps:
-
+      
+      - name: Checkout repository
+        uses: actions/checkout@v2
+        with:
+          inlineScript: |
+          pwd;ls
+          
       - name: Login to Azure
         uses: azure/login@v1
         with:
