--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -39,6 +39,8 @@ jobs:
             curl -LO "https://dl.k8s.io/release/$(curl -L -s https://dl.k8s.io/release/stable.txt)/bin/linux/amd64/kubectl"
             chmod 700 kubectl
             cp kubectl /usr/bin
+            az config set extension.use_dynamic_install=yes_without_prompt
+            az extension add --name connectedk8s
             az connectedk8s proxy -n arc-aks-001 -g rg-arc-001 &
             sleep 5
             kubectl get pod
